--- a/register.component.html
+++ b/register.component.html
@@ -23,10 +23,12 @@
                 <div class="form-group col-md-6">
                   <label>First Name</label>
                   <input type="text" class="form-control" formControlName="fname" id="fname" >
+                  <span class="text-danger" *ngIf="!registerForm.get('fName').valid && registerForm.get('fName').touched">*First Name is required</span>
                 </div>
                 <div class="form-group col-md-6">
                   <label>Last Name</label>
                   <input type="text" class="form-control" formControlName="lname" id="lname">
+                  <span class="text-danger" *ngIf="!registerForm.get('lName').valid && registerForm.get('lName').touched">*Last Name is required</span>
                 </div>
               </div>
               <div class="row mt-4">
@@ -56,11 +58,13 @@
                           <label  for="Username">Username</label>
                           <div class="input-group">
                             <input type="text" class="form-control" formControlName="username" id="username">
+                            <span class="text-danger" *ngIf="!registerForm.get('username').valid && registerForm.get('username').touched">*Username is required</span>
                           </div>      
                   </div>
                   <div class="form-group col-md-6">
                       <label for="Password">Password</label>
                       <input type="password" id="Password" class="form-control" formControlName="password" id="password" >
+                    <span class="text-danger" *ngIf="!registerForm.get('password').valid && registerForm.get('password').touched">*Password is required</span>
                     </div>
                 </div>
                 <div class="row mt-4">
